--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,31 @@
 #root {
-  margin: 0;
-  padding: 0;
+    flex: 1 1 auto;
+    align-self: stretch;    /* take up the entire space of <body> */
+    background-color: #FFFFFF;
 }
+
+/* editor on the left side */
+#editor {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+    padding: 5vh 0 10vw 0;
+    gap: 2.5vh;
+  
+    /* editor header */
+    > h1 {
+      font-family: "Red Hat Display";
+      text-align: center;
+      padding: 1rem 0 1rem 0;
+      font-size: 2rem;
+      margin: 0;
+      background-color: #C5050C;
+      color: #FFFFFF;
+    }
+
+    /* editor body */
+    > div {
+      padding: 0 5vw 0 5vw;
+    }
+  }
