--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,13 @@
     background-color: #FFFFFF;
 }
 
+#screen {
+  display: flex;
+}
+
 /* editor on the left side */
 #editor {
-    flex: 1;
+    width: 50vw;
     display: flex;
     flex-direction: column;
     align-self: stretch;
@@ -26,6 +30,48 @@
 
     /* editor body */
     > div {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
       padding: 0 5vw 0 5vw;
     }
   }
+
+  #viewer {
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+    background-color: grey;
+
+    > #menu {
+      background-color: #353839;
+      height: 4.5%;
+    }
+
+    > #viewer-body {
+      display: flex;
+      height: 100%;
+      padding: 1.5% 19% 4% 19%;
+
+      > #pdf {
+        display: flex;
+        flex: 1 1 auto;
+        background-color: white;
+
+        > #side {
+          flex: 5;
+          display: flex;
+          flex-direction: column;
+          background-color: #2B2E43;
+        }
+
+        > #main {
+          flex: 8;
+        }
+      }
+    }
+  }
+
