--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,19 @@
   > #menu {
     background-color: #353839;
     height: 4.5%;
+    display: flex;
+    justify-content: center;
+
+    > button {
+      padding: 0;
+      border: 0;
+      background-color: #353839;
+
+      > img {
+        width: 30px;
+        height: 30px;
+      }
+    }
   }
 
   > #viewer-body {
@@ -181,5 +194,39 @@
     font-size: 1rem;
     padding-left: 5%;
     margin: 0;
+  }
+}
+
+#experience {
+  color: black;
+
+  /* personal details header */
+  h1 {
+    font-family: "Red Hat Display";
+    font-size: 1.5rem;
+    margin-bottom: 0;
+  }
+
+  hr {
+    border-color: #c5050c;
+    margin-bottom: 1rem;
+  }
+
+  /* change this later */
+  .container {
+    font-family: "Red Hat Text";
+    display: flex;
+    border: 1px solid black;
+
+    button {
+      background-color: white;
+      padding: 0;
+      height: 25px;
+
+      img {
+        width: 25px;
+        height: 25px;
+      }
+    }
   }
 }
