--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   flex: 1 1 auto;
   align-self: stretch; /* take up the entire space of <body> */
   background-color: #ffffff;
+  --editor-theme-color: #c5050c;
+  --input-background-color: #dcdcdc;
+  --achievement-background-color: #333333;
+  --outline-color: #333333;
+  --menu-background-color: #353839;
+  --side-background-color: #2b2e43;
+  --viewer-background-color: #989898;
 }
 
 #screen {
@@ -24,8 +31,8 @@
     padding: 1rem 0 1rem 0;
     font-size: 2rem;
     margin: 0;
-    background-color: #c5050c;
-    color: #ffffff;
+    background-color: var(--editor-theme-color);
+    color: white;
   }
 
   /* editor body */
@@ -44,10 +51,10 @@
   height: 100vh;
   position: fixed;
   right: 0;
-  background-color: grey;
+  background-color: var(--viewer-background-color);
 
   > #menu {
-    background-color: #353839;
+    background-color: var(--menu-background-color);
     height: 4.5%;
     display: flex;
     justify-content: center;
@@ -55,7 +62,7 @@
     > button {
       padding: 0;
       border: 0;
-      background-color: #353839;
+      background-color: var(--menu-background-color);
 
       > img {
         width: 30px;
@@ -78,7 +85,7 @@
         flex: 5;
         display: flex;
         flex-direction: column;
-        background-color: #2b2e43;
+        background-color: var(--side-background-color);
       }
 
       > #main {
@@ -101,7 +108,7 @@
   }
 
   hr {
-    border-color: #c5050c;
+    border-color: var(--editor-theme-color);
     margin-bottom: 1rem;
   }
 
@@ -141,7 +148,7 @@
           flex: 1 1 auto;
           font-family: "Red Hat Text";
           color: black;
-          background-color: #dcdcdc;
+          background-color: var(--input-background-color);
           border-radius: 5px;
           border: 0;
           padding: 0.375rem 0.5rem 0.375rem 0.5rem;
@@ -217,7 +224,7 @@
     input {
       font-family: "Red Hat Text";
       color: black;
-      background-color: #dcdcdc;
+      background-color: var(--input-background-color);
       border-radius: 5px;
       border: 0;
       padding: 0.375rem 0.5rem 0.375rem 0.5rem;
@@ -230,7 +237,7 @@
 
     input:focus,
     input:hover {
-      outline: 2px solid #333333;
+      outline: 2px solid var(--outline-color);
     }
   }
 }
@@ -240,7 +247,7 @@
     width: 200px;
     font-family: "Red Hat Text";
     color: black;
-    background-color: #dcdcdc;
+    background-color: var(--input-background-color);
     border-radius: 5px;
     border: 0;
     padding: 0.375rem 0.5rem 0.375rem 0.5rem;
@@ -248,7 +255,7 @@
 
   input:focus,
   input:hover {
-    outline: 2px solid #333333;
+    outline: 2px solid var(--outline-color);
   }
 
   .container {
@@ -257,7 +264,7 @@
   }
 
   button {
-    background-color: #333333;
+    background-color: var(--achievement-background-color);
     color: white;
     padding: 5px 20px;
     margin: 3px 6px;
