--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
   --side-background-color: #2b2e43;
   --main-text-color: #2b2e43;
   --viewer-background-color: #989898;
+  --pdf-width: calc(31vw);
+  --pdf-height: calc(1.41421356237 * var(--pdf-width));
 }
 
 #screen {
@@ -59,6 +61,7 @@
     height: 4.5%;
     display: flex;
     justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
     > button {
       padding: 0;
@@ -66,20 +69,23 @@
       background-color: var(--menu-background-color);
 
       > img {
-        width: 30px;
-        height: 30px;
+        width: 24px;
+        height: 24px;
       }
     }
   }
 
   > #viewer-body {
+    flex: 1;
     display: flex;
-    height: 100%;
-    padding: 1.5% 19% 4% 19%;
+    justify-content: center;
+    align-items: flex-end;
 
     > #pdf {
       display: flex;
-      flex: 1 1 0;
+      width: var(--pdf-width);
+      height: var(--pdf-height);
+
       background-color: white;
 
       > #side {
@@ -90,7 +96,7 @@
       }
 
       > #main {
-        flex: 8;
+        flex: 9;
       }
     }
   }
@@ -268,7 +274,7 @@
     background-color: var(--achievement-background-color);
     color: white;
     padding: 5px 20px;
-    margin: 3px 6px;
+    margin: 3px 12px 3px 0;
     text-align: center;
     display: inline-flex;
     align-items: center;
@@ -280,8 +286,8 @@
 }
 
 #view-picture {
-  height: 125px;
-  width: 125px;
+  height: 100px;
+  width: 100px;
   border-radius: 50%;
   margin: 35px auto;
 }
@@ -292,7 +298,8 @@
   margin-left: 20%;
 
   h2 {
-    border-bottom: 1px solid white;
+    font-size: 1rem;
+    border-bottom: 2px solid white;
     margin: 0;
   }
 
@@ -303,11 +310,12 @@
     li {
       display: flex;
       flex-direction: column;
+      font-size: 0.625rem;
       font-weight: 800;
 
       span {
         font-weight: 200;
-        font-size: 0.625rem;
+        font-size: 0.45rem;
       }
     }
   }
@@ -318,28 +326,91 @@
 #view-education,
 #view-skills {
   color: var(--main-text-color);
+  padding-top: 8%;
+  padding-left: 5%;
+  padding-right: 5%;
 
   h1 {
-    font-size: 2rem;
+    font-size: 1.35rem;
     letter-spacing: 0.2rem;
-    padding-top: 10%;
-    padding-left: 5%;
+    font-weight: 900;
     margin: 0;
     span {
-      font-weight: 400;
+      font-weight: 500;
     }
   }
 
   h2 {
+    font-size: 0.9rem;
     letter-spacing: 0.1rem;
-    font-size: 1rem;
-    padding-left: 5%;
     margin: 0;
   }
 
   p {
-    font-size: 1rem;
-    padding-left: 5%;
+    font-size: 0.45rem;
     margin: 0;
+  }
+}
+
+#view-experience,
+#view-education {
+  padding-top: 1rem;
+
+  h1 {
+    font-size: 1rem;
+    padding-bottom: 0.2rem;
+    border-bottom: 1.25px solid var(--main-text-color);
+    letter-spacing: 0;
+  }
+
+  .container {
+    margin-top: 0.5rem;
+
+    h2 {
+      font-size: 0.75rem;
+      letter-spacing: 0;
+      font-weight: 800;
+    }
+
+    .date {
+      font-size: 0.6rem;
+      font-weight: 600;
+    }
+
+    .location {
+      font-size: 0.5rem;
+      font-weight: 400;
+    }
+  }
+}
+
+#view-skills {
+  padding-top: 1rem;
+
+  h1 {
+    font-size: 1rem;
+    padding-bottom: 0.2rem;
+    border-bottom: 1.25px solid var(--main-text-color);
+    letter-spacing: 0;
+  }
+
+  ul {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 0.5rem;
+    text-decoration: underline;
+    margin-bottom: 0;
+
+    li {
+      display: grid;
+      grid-template-columns: 45% 55%;
+      font-size: 0.5rem;
+      font-weight: 800;
+      margin-bottom: 0.1rem;
+
+      span {
+        font-weight: 300;
+      }
+    }
   }
 }
